# heisala-jetty

./: .gitignore  BuildForPi.java  README.md  pom.xml
heisala-jetty-server/: README.md  pom.xml
heisala-jetty-server/src/main/java/in/virit/: AppShell.java  BleWaterDistanceClient.java  CameraService.java  CameraView.java  DateRangeValidator.java  HelpButton.java  ImageBrowserView.java  ImageEndpoint.java  MainView.java  SeaLevelReporter.java  SystemMonitor.java  TimelapseService.java  TimelapseSettings.java  TimelapseSettingsForm.java  TimelapseView.java  TopLayout.java  ValidDateRange.java  VideoEndpoint.java  WaterDistanceEndpoint.java  WaterDistanceService.java  WaterLevelView.java
heisala-jetty-server/src/main/resources/: application.properties
libcamera-4j/: BuildNative.java  Dockerfile  Dockerfile.smoke  README.md  ffm-analysis.md  pom.xml
libcamera-4j-demo/: pom.xml
libcamera-4j-demo/src/main/java/in/virit/libcamera4j/demo/: CameraDemo.java
libcamera-4j/src/main/java/in/virit/libcamera4j/: AfMode.java  Camera.java  CameraCapture.java  CameraConfiguration.java  CameraManager.java  CameraSettings.java  CaptureResult.java  ColorSpace.java  ControlId.java  ControlInfo.java  ControlList.java  DngWriter.java  FrameBuffer.java  FrameBufferAllocator.java  FrameMetadata.java  ImageMetadata.java  LibCameraException.java  MappedFrame.java  Native.java  NativeLoader.java  PixelFormat.java  PixelFormatConverter.java  Point.java  RawImage.java  Rectangle.java  Request.java  Size.java  StreamConfiguration.java  StreamRole.java  Transform.java  package-info.java
libcamera-4j/src/main/native/: CMakeLists.txt  libcamera4j.cpp  libcamera4j.h
libcamera-4j/src/test/java/in/virit/libcamera4j/: Smoke.java  ZeroCopyConverterTest.java
